# original-data-opc-influx-test

./: .env  .gitignore  README.md
client-influx-db/: Dockerfile  opc-ua-client.py  requirements.txt
sensor-simulator/: Dockerfile  opc-ua-server.py  pyproject.toml
